review FileSplit and FileMerge